added Database Queries